# fidogate

./: .cvsignore  .dir-locals.el  .gear-rules  .gitignore  .travis.yml  ANNOUNCE  ANNOUNCE.OLD  ChangeLog  Changes.ru  Makefile  Makefile.am  Makefile.in  README  TESTS  TODO  TODO.rus  acconfig.h  acinclude.m4  aclocal.m4  build-rpms  config.h  config.h.in  config.make  config.pl  configure  configure.ac  configure.in  cvsci  cvsdeldir  cvsexp  cvsupd  fidogate.lsm  fidogate.spec  rules.make  subst.pl  update-morannon  version  version.h
configs/: Makefile.am  Makefile.in  areas.sample  bounce.down  fidogate.conf.sample.in  ftnacl.sample  passwd.sample
doc/: FAQ.ru  FAQ_Config.ru  FIDOGATE+tracker  Makefile  Makefile.am  Makefile.in  README  README.en  README.ru  dbz.man  dirs.html  fidogate.info  fidogate.info-1  fidogate.info-2  fidogate.info-3  fidogate.texi  gatebau94.txt  index.html  info2txt.pl  kludge-rfc.doc  msgid.doc  qmail.txt  texinfo.tex
doc/examples/: README
doc/fido/: fsc-0018.txt  fsc-0028.txt  fsc-0035.txt  fsc-0039.004  fsc-0043.002  fsc-0047.001  fsc-0048.002  fsc-0054.txt  fsc-0057.002  fts-0001.015  fts-0004.txt  fts-0009.001
doc/gatebau/: Makefile  msgid-1.html  msgid-2.html  msgid-3.html  msgid-4.html  msgid-5.html  msgid-6.html  msgid-7.html  msgid.html  msgid.lyx  msgid.sgml  msgid.tex  msgid.txt  post-html.pl
doc/howto/: FidoNode-1.html  FidoNode-10.html  FidoNode-11.html  FidoNode-12.html  FidoNode-13.html  FidoNode-2.html  FidoNode-3.html  FidoNode-4.html  FidoNode-5.html  FidoNode-6.html  FidoNode-7.html  FidoNode-8.html  FidoNode-9.html  FidoNode.html  FidoNode.sgml  Makefile
doc/html/: Makefile  fidogate.html  fidogate_1.html  fidogate_2.html  fidogate_3.html  fidogate_4.html  fidogate_5.html  fidogate_6.html  fidogate_7.html  fidogate_8.html  fidogate_abt.html  fidogate_ovr.html  fidogate_toc.html
doc/man/: parsedate.3
doc/misc/: ifmail-and-fidogate.doc  unpack-script.doc
doc/old/: ChangeLog  ChangeLog.OO  FAQ_fidogate  FIDOGATE_ftrack  README.snp  README.snp.en  dirs.html  fidogate.texi  fidogate.txt  info2txt.pl  listcf.pl  msgid.doc  template.html  texinfo.tex
doc/rfc/: rfc-index.txt  son-of-1036.html
scripts/: .gitignore  Makefile  Makefile.am  Makefile.in
scripts/areas/: Makefile  Makefile.am  Makefile.in  areasbbssync.in  areasbbssync.pl  areassucksync.in  areassucksync.pl
scripts/cnews/: Makefile  batchparms  compgz  run-batch.sh  sys  viaffx.sh  viafidogate.sh
scripts/filebase/: Makefile  fb-chkfiles.in  fb-chkfiles.pl  fb-filelist.in  fb-filelist.pl
scripts/inn/: filter_nnrpd.pl
scripts/maintenance/: Makefile  Makefile.am  Makefile.in  fidogate.logrotate  fidogate.logrotate.in  logcheck.in  logcheck.pl  logdaily.in  logdaily.sh  logreport.in  logreport.pl  logsendmail.in  logsendmail.pl  logsendmail2.pl  logstat.in  logstat.pl  rc.fidogate.in  rc.fidogate.sh  runchklock.in  runchklock.sh
scripts/misc/: Makefile  Makefile.am  Makefile.in  hosts2dns.in  hosts2dns.pl  recvuu.in  recvuu.pl  senduu.in  senduu.sh  senduumail.in  senduumail.sh
scripts/nodelist/: Makefile  Makefile.am  Makefile.in  html-tmpl.in  html-tmpl.pl  latest.pl  nl-2hosts.in  nl-2hosts.pl  nl-2routing.in  nl-2routing.pl  nl-autoupd.in  nl-autoupd.pl  nl-check.pl  nl-del.in  nl-del.pl  nl-diff.in  nl-diff.pl  nl-html.in  nl-html.pl  nl-isdn.pl  nl-print.in  nl-print.pl  template.html
scripts/outbound/: Makefile  Makefile.am  Makefile.in  out-attach.in  out-freq.in  out-freq.pl  out-ls.in  out-ls.pl  out-manip.in  out-manip.pl  out-rm0.in  out-rm0.sh  out-rmbsy.in  out-rmbsy.sh  outb-kill.in  outb-kill.sh  outb.in  outb.sh
scripts/run/: Makefile  runpoll-binkd.sh  runpoll-orodruin.sh  runpoll.sh
scripts/www/: Makefile  gate.cgi.in  gate.cgi.pl
src/: .depend  .gitignore  DEBUGLEVEL  HEAD  Makefile  Makefile.am  Makefile.in
src/areafix/: Makefile  Makefile.am  Makefile.in  areafix.c  areafix.help  ftnaf.c  ftnafmail.c  ftnafpkt.c  ftnafutil.c  mailer.c  pkttmpl.c  runafutil.sh
src/charset/: Makefile  Makefile.am  Makefile.in  charset.c  charset.map  charsetc.c  cyrillic.map  russian.map
src/common/: .depend  Makefile  Makefile.am  Makefile.in  acl.c  acl_ftn.c  active.c  address.c  aliases.c  areas.c  areasbbs.c  binkley.c  bounce.c  cf_abbrev.c  cf_abbrev.mak  cf_env.c  cf_env.mak  cf_funcs.c  cf_funcs.mak  charset.c  config.c  crc16.c  crc32.c  date.c  dbz.c  dir.c  file.c  flo.c  fopen.c  ftnaddr.c  getopt.c  getopt1.c  gettime.c  histdb.c  hosts.c  kludge.c  lock.c  log.c  mail.c  message.c  (+27 more)
src/ffx/: .depend  Makefile  ffx.c  ffxmail.sh  ffxnews.sh  ffxqt.c  ffxrmail.pl  runffx.sh  send-ffx.sh
src/gate/: .depend  Makefile  Makefile.am  Makefile.in  ftn2rfc.c  ftnin.c  ftninpost.c  ftninpost.pl  ftninrecomb.in  ftninrecomb.pl  ftnmail.c  ftnnews.c  rfc2ftn.c  rungate.sh  send-fidogate.in  send-fidogate.sh  send-fidogate.sn  send-fidogate.snews  xct.in
src/include/: Makefile  Makefile.am  Makefile.in  cf_funcs.h  cf_funcs.mak  constants.h  dbz.h  declare.h  fidogate.h  getopt.h  node.h  packet.h  paths.h  paths.mak  prototypes.h  structs.h
src/tick/: .depend  Makefile  Makefile.am  Makefile.in  ftnhatch.c  ftntick.c  ftntickpost.in  ftntickpost.pl
src/toss/: .depend  Makefile  Makefile.am  Makefile.in  dbz.c  ftn2ftn.c  ftnexpire.c  ftnpack.c  ftnroute.c  ftntoss.c  history.c  magic  ngoper.c  packing.c  report_traffic.in  runin.sh  runinc.c  runmail.sh  runnews.sh  runout.sh  runtoss.pl  rununpack.pl
src/util/: .depend  Makefile  Makefile.am  Makefile.in  confval.c  ftnbsy.c  ftnconfig.c  ftnfattach.c  ftnflo.c  ftngenpkt.c  ftnlock.c  ftnlog.c  ftnoutpkt.c  ftnseq.c  pktdebug.c  pktmore.in  pktmore.sh  sumcrc.c
tests/: .gitignore  Makefile.am  Makefile.in  cmp-pkt.c  cmp-pkt.sh  cmp-rfc.sh
tests/areafix/: Makefile.am  Makefile.in
tests/charset/: Makefile.am  Makefile.in
tests/common/: Makefile  Makefile.am  Makefile.in  config_cf_p_tests.h  mock-config-cf_s.c  mock-config.c  mock-stdio.c  mock-syslog.c  test-charset.c  test-config-api.c  test-config.c  test-date.c  test-log-api.c  test-log-debug-syslog.c  (+9 more)
(+501 files in other folders)
